# modeling

lab1/: pyproject.toml
lab1/data/: numbers.txt
lab1/src/: 01_basic_statistics.py  02_correlation_analysis.py  03_distribution_fitting.py  distribution.py  main.py  statistics.py  utils.py  visualization.py
