[tool.poetry]
name = "lab1"
version = "0.1.0"
description = "Modeling - Lab #1"
authors = ["Kirill Ankudinov <kirill.ankudinov.94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
numpy = "^2.2.5"
scipy = "^1.15.3"
statsmodels = "^0.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
